2009-10-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix some issues with whitespace handling.
	
	* tools/include/m4sugar_regexp.patch: New.
	
	* tools/Makefile.am: Patch regexps after translating the quotes in
	m4sugar, since some regexps can contain valid single pairs of [
	and ].

	* tools/lib/t-seqc/slimpl.m4: Do not initialize thread arguments
	when the initializer is whitespace.

	* tools/bin/spp: Strip whitespace from initializer before testing
	for emptyness.

2009-10-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make testsuite more resilient to long tests.

	* tools/bin/timeout.in: Increase the default timeout to 60
	seconds.

2009-10-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Increase support for C99.
	
	* tools/bin/cce.in: Use `-std=gnu99' when compiling for MT.

2009-10-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix.
	
	* build-aux/sl.mk (.c.x): Fix typo in variable expansion.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the build framework.
	
	* build-aux/sl.mk: Allow Makefiles to add flags to the `slc'
	command lines.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the performance counters library.

	* lib/include/svp/perf.h: Introduce new macro `REPORT_STREAM'.
	
	* lib/src/perf.c: Use the specified stream for output.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug with special characters in string constants.

	* tools/bin/cm4.in: Insert string delimiters after inserted hex
	escapes, to prevent adjacent digits from taking part in the
	character code.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance `slr'.
	
	* tools/bin/slr.in: Also use `SLR_RECURSIVE' when processing the
	Fibre input.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow to use thread function pointers with muTC-ptl.
	
	* tools/lib/t-ptl/simpl.m4: Do not take the address of the thread
	function when invoking uTC::create.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>
