@@ -22,10 +22,10 @@ m4_define([[__sl_crcnt]],0)
 
 m4_define([[sl_decl]], [[void [[$1]](void)]])
 
-m4_define([[sl_shparm]],[[sh:i:[[$1]]:[[$2]]]])
-m4_define([[sl_glparm]],[[gl:i:[[$1]]:[[$2]]]])
-m4_define([[sl_shfparm]],[[sh:f:[[$1]]:[[$2]]]])
-m4_define([[sl_glfparm]],[[gl:f:[[$1]]:[[$2]]]])
+m4_define([[sl_shparm]],[[sh:i:[[$1]]:m4_if([[$2]],,sl_anonymous,[[$2]])]])
+m4_define([[sl_glparm]],[[gl:i:[[$1]]:m4_if([[$2]],,sl_anonymous,[[$2]])]])
+m4_define([[sl_shfparm]],[[sh:f:[[$1]]:m4_if([[$2]],,sl_anonymous,[[$2]])]])
+m4_define([[sl_glfparm]],[[gl:f:[[$1]]:m4_if([[$2]],,sl_anonymous,[[$2]])]])
 
 m4_define([[m4_sh_escape]],[['m4_bpatsubst([[$1]],[[[']]],[['"'"']])']])
 
@@ -53,10 +53,10 @@ m4_define([[sl_end_thread]], [[goto __sl_end_thread]])
 m4_define([[sl_getp]],[[__sl_getp_$1]])
 m4_define([[sl_setp]],[[__sl_setp_$1([[$2]])]])
 
-m4_define([[sl_sharg]],[[sh:i:[[$1]]:[[$2]]:[[$3]]]])
-m4_define([[sl_glarg]],[[gl:i:[[$1]]:[[$2]]:[[$3]]]])
-m4_define([[sl_shfarg]],[[sh:f:[[$1]]:[[$2]]:[[$3]]]])
-m4_define([[sl_glfarg]],[[gl:f:[[$1]]:[[$2]]:[[$3]]]])
+m4_define([[sl_sharg]],[[sh:i:[[$1]]:m4_if([[$2]],,sl_anonymous,[[$2]]):[[$3]]]])
+m4_define([[sl_glarg]],[[gl:i:[[$1]]:m4_if([[$2]],,sl_anonymous,[[$2]]):[[$3]]]])
+m4_define([[sl_shfarg]],[[sh:f:[[$1]]:m4_if([[$2]],,sl_anonymous,[[$2]]):[[$3]]]])
+m4_define([[sl_glfarg]],[[gl:f:[[$1]]:m4_if([[$2]],,sl_anonymous,[[$2]]):[[$3]]]])
 
 m4_define([[sl_geta]],[[__sl_geta_$1]])
 m4_define([[sl_seta]],[[__sl_seta_$1([[$2]])]])
