@@ -37,8 +37,8 @@ m4_ifdef([[_sl_increate]],[[m4_fatal(missing sync after create)]])m4_dnl
 m4_define([[sl_decl]], m4_defn([[sl_def]]))
 
 # Pass transparently parameter declarations.
-m4_define([[sl_shparm]], [[uTC::shared<[[$1]]>& __p_[[$2]]]])
-m4_define([[sl_glparm]], [[uTC::global<[[$1]]>& __p_[[$2]]]])
+m4_define([[sl_shparm]], [[uTC::shared<[[$1]]>& __p_[[]]m4_if([[$2]],,sl_anonymous,[[$2]])]])
+m4_define([[sl_glparm]], [[uTC::global<[[$1]]>& __p_[[]]m4_if([[$2]],,sl_anonymous,[[$2]])]])
 m4_copy([[sl_shparm]],[[sl_shfparm]])
 m4_copy([[sl_glparm]],[[sl_glfparm]])
 
@@ -46,8 +46,8 @@ m4_copy([[sl_glparm]],[[sl_glfparm]])
 m4_define([[sl_index]], [[uTC::index [[$1]]]])
 
 # Pull shared and global argument declarations.
-m4_define([[sl_sharg]],[[&::[[$1]]:[[$2]]:m4_if([[$3]],,,[[= [[$3]]]])]])
-m4_define([[sl_glarg]],[[:const:[[$1]]:[[$2]]:m4_if([[$3]],,,[[= [[$3]]]])]])
+m4_define([[sl_sharg]],[[&::[[$1]]:m4_if([[$2]],,sl_anonymous,[[$2]]):m4_if([[$3]],,,[[= [[$3]]]])]])
+m4_define([[sl_glarg]],[[:const:[[$1]]:m4_if([[$2]],,sl_anonymous,[[$2]]):m4_if([[$3]],,,[[= [[$3]]]])]])
 m4_copy([[sl_sharg]],[[sl_shfarg]])
 m4_copy([[sl_glarg]],[[sl_glfarg]])
 
